fix horizontal scrollbar in modal

--- a/index.css
+++ b/index.css
@@ -281,12 +281,13 @@ pre {
     height: 100%;
     padding: 0 0.5rem;
     margin: 0;
-    overflow-y: scroll;
+    overflow: scroll;
     text-wrap: wrap;
 }
 
 pre::-webkit-scrollbar {
     width: 0.5rem;
+    height: 0.5rem;
 }
 
 pre::-webkit-scrollbar-thumb {
@@ -296,6 +297,10 @@ pre::-webkit-scrollbar-thumb {
 
 pre::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.4);
+}
+
+pre::-webkit-scrollbar-corner {
+    background-color: transparent;
 }
 
 @keyframes pulse {
